# mcmcpcp

./: .gitignore  Cargo.toml  Dioxus.toml  LICENSE  README.md
assets/: main.css  preview.html
docs/: CREATIVE_WRITER_MCP_TOOLS.md  index.html
docs/ghpages/assets/: main-dxh5d286ecfc3faea.css
ghpages/: index.html
ghpages/assets/: mcmcpcp-dxh844ec1ee85d98c28.js
src/: app_settings.rs  box_select.rs  chat_input.rs  collapsible.rs  home.rs  init.sql  lib.rs  llm.rs  main.rs  markdown.rs  md2rsx.rs  message.rs  settings.rs  toolset.rs  utils.rs
src/mcp/: api.rs  config.rs  fetch.rs  host.rs  jsonrpc.rs  mod.rs  server.rs  transport.rs
src/storage/: browser_storage.rs  file_storage.rs  mod.rs
src/toolset/: chat.rs  mod.rs  story.rs
src/ui/: box_select.rs  chat_input.rs  chat_log.rs  collapsible.rs  home.rs  mcp_tools.rs  message.rs  message_group.rs  mod.rs  settings.rs  slideout.rs  story.rs
