[package]
name = "mcmcpcp"
version = "0.1.0"
authors = ["Nipun Kumar <nipunkumar@outlook.com>"]
edition = "2021"

[dependencies]
dioxus = { version = "0.7.0-rc.0", features = ["router"] }
dioxus-native = { version = "0.7.0-rc.0" }
# TODO: include when DX 0.7.0 is out
# dioxus-primitives = { git = "https://github.com/DioxusLabs/components", version = "0.0.1" }
# dioxus-free-icons = { version = "0.9", features = ["font-awesome-brands"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
# parking_lot = "0.12"

serde = {version = "1" , features=["derive"]}
serde_json = "1"
# sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "macros"] }
async-openai = "0.29"
anyhow = "1"
pulldown-cmark = "0.13"
uuid = { version = "1", features = ["v4"] }
html2md = "0.2"
reqwest = "0.12"

[features]
default = ["desktop"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
