[package]
name = "mcmcpcp"
version = "0.1.0"
authors = ["Nipun Kumar <nipunkumar@outlook.com>"]
edition = "2024"

[dependencies]
dioxus = { version = "0.7.0-rc.0", features = ["router"] }
tokio = { version = "1", default-features = false, features = ["sync", "rt", "macros"] }
futures = "0.3"
serde = {version = "1" , features=["derive"]}
serde_json = "1"
anyhow = "1"
pulldown-cmark = { version = "0.13", default-features = false }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
dioxus-native = { version = "0.7.0-rc.0" }
tokio = { version = "1", default-features = false, features = ["sync", "rt", "macros", "process"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"

[features]
default = ["desktop"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
