[package]
name = "mcmcpcp"
version = "0.1.0"
authors = ["Nipun Kumar <nipunkumar@outlook.com>"]
edition = "2024"

[dependencies]
anyhow = "1"
dioxus = { version = "0.7.0-rc.0", features = ["router"] }
tokio = { version = "1", default-features = false, features = ["sync", "rt", "macros"] }
futures = "0.3"
async-trait = "0.1"
serde = {version = "1" , features=["derive"]}
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream"] }
percent-encoding = "2.3"
pulldown-cmark = { version = "0.13", default-features = false }
html2md = "0.2"

[target.'cfg(target_os = "android")'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
dioxus-native = { version = "0.7.0-rc.0" }
tokio = { version = "1", default-features = false, features = ["full"] }
directories-next = "2"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4.51"
gloo-net = "0.6"
idb = "0.6"
serde-wasm-bindgen = "0.6"
js-sys = "0.3.78"

[features]
default = ["desktop"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
